# TA_13319004

./: .gitignore  .gitmodules  Note.txt  RTGC Non linear Control System Based on Sliding Mode Controller.docx
Paper ICA & ICCAS 2023/: Constrained and Unconstrained Non-Linear Control RTGC with DC Motor Based on Sliding Mode Controller.docx
Paper ICA 2023/: Style_File_ICCAS2023.docx  ~$yle_File_ICCAS2023.docx
Simulasi/: Hasil_Olah_Tuning_Simulation_Result.csv  Simulasi_Tuning.ipynb  Tuning_Simulation_Result.csv  lalala.py  simulasi.py  simulasi_gantry.py  simulasi_gantry_v2.py  simulasi_motor.py  simulasi_motor_gantry.py
Simulasi/Gambar/: variasi_gantry_ICA.ipynb
Simulasi/Gambar/Simulasi Gantry Motor/: simulasi_motor_gantry.py
Simulasi/Gambar/Variasi ICA/: result.xlsx  variasi_gantry_ICA.ipynb
Simulasi/Simulasi Gantry ICA/: README.md  simulasi_gantry.py
Simulasi/Simulasi Gantry ICA/Other/: olahdatahasiltuning.ipynb
Simulasi/Simulasi Gantry ICA/Variasi ICA/: result.xlsx  variasi_gantry_ICA.ipynb
Simulasi/Simulasi Gantry Motor/: result.xlsx  simulasi_gantry_motor.py
Simulasi/Simulasi Gantry Motor ICCAS/: Olah Result.xlsx  gantry_motor_simulation.py  result.xlsx  simulasi_gantry_motor.ipynb  simulasi_gantry_motor.py
Simulasi/Simulasi Gantry/Variasi ICA/: variasi_gantry_ICA.ipynb
documents/Paper ICA & ICCAS 2023/: Constrained and Unconstrained Non-Linear Control RTGC with DC Motor Based on Sliding Mode Controller.docx  ICCAS2023 - Non-Linear Control RTGC with DC Motor Based on SMC.docx
ros2_ws/src/cpp_gantry_crane/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_gantry_crane/src/: point_cloud_lidar.cpp
ros2_ws/src/depthframe_gantry/: CMakeLists.txt  package.xml
ros2_ws/src/depthframe_gantry/src/: depthframe_gantry.cpp
ros2_ws/src/pointcloud_gantry/: CMakeLists.txt  package.xml
ros2_ws/src/pointcloud_gantry/include/: realsense_connector.h
ros2_ws/src/pointcloud_gantry/include/pointcloud_gantry/: object_detection_algorithm.h  realsense_connector.h
ros2_ws/src/pointcloud_gantry/src/: object_detection_algoritm.cpp  pointcloud_gantry.cpp  realsense_connector.cpp
ros2_ws/src/ros2_gantry/: package.xml  setup.cfg  setup.py
ros2_ws/src/ros2_gantry/ros2_gantry/: ros2_controlgantry.py
